Fix layout issues:
 - Display layouts in toolbox based on permission
 - Update layoutactions after block has been moved

--- a/ftw/simplelayout/browser/client/web/styles/scss/_toolbox.scss
+++ b/ftw/simplelayout/browser/client/web/styles/scss/_toolbox.scss
@@ -99,6 +99,7 @@ body.simplelayout-initialized {
         visibility: hidden;
         opacity: 0;
         position: absolute;
+        font-weight: normal;
       }
 
       &.sl-toolbox-header {
